# fastapi-realworld

./: README.md  pyproject.toml  test.sqlite
fastapi_realworld/: app.py  schemas.py  utils.py
fastapi_realworld/db/: db.py  query.py  user.py
fastapi_realworld/routers/: articles.py  profiles.py  tags.py  users.py
tests/: conftest.py  pytest.db  test_user.py  test_utils.py
